# ukf_trajectory_predictor

./: CMakeLists.txt  README.md  package.xml
aerostack_msgs/: CMakeLists.txt  README.md  package.xml
aerostack_msgs/msg/: AliveSignal.msg  BehaviorCommand.msg  BehaviorCommandPriority.msg  BehaviorEvent.msg  ErrorType.msg  ExecutionRequest.msg  FlightMotionControlMode.msg  Float32Stamped.msg  FloatStamped.msg  ListOfBehaviors.msg  ListOfBeliefs.msg  ListOfProcesses.msg  ProcessDescriptor.msg  ProcessDescriptorList.msg  ProcessError.msg  ProcessState.msg  QuadrotorPidControllerMode.msg  SocialCommunicationStatement.msg  StringStamped.msg  Trajectory.msg  Vector2Stamped.msg  WindowEvent.msg  WindowIdentifier.msg
aerostack_msgs/srv/: BehaviorSrv.srv  CheckActivationConditions.srv  CheckBehaviorFormat.srv  ConsultIncompatibleBehaviors.srv  ControlMode.srv  RequestBehavior.srv  RequestBehaviorActivation.srv  RequestBehaviorDeactivation.srv  SetControlMode.srv  StartBehavior.srv
droneMsgsROS/: .gitignore
droneMsgsROS/msg/: BoundingBox.msg
droneMsgsROS/srv/: QueryLastGeneratedID.srv
launch/: ukf_trajectory_predictor.launch  ukf_trajectory_predictor_sim.launch
robot_process/: CMakeLists.txt  README.md  package.xml
robot_process/include/: robot_process.h
robot_process/source/: robot_process.cpp
src/include/: aukf_trajectory_predictor.h  ukf_future_trajectory_predictor.h
src/include/ukf/: Config.h  Core.h  Integrator.h  MeasurementVector.h  StateVector.h  Types.h  generic_ukf.hpp  predictor.hpp  updater.hpp
src/source/: aukf_trajectory_predictor.cpp
src/source/ukf/: generic_ukf.cpp
src/test/: ukf_trajectory_predictor_node.cpp
ukf_trajectory_predictor/: .gitignore  jump_back.py
ukf_trajectory_predictor/src/include/: aukf_trajectory_predictor.h  ukf_future_trajectory_predictor.h
ukf_trajectory_predictor/src/include/ukf/: generic_ukf.hpp  updater.hpp
ukf_trajectory_predictor/src/source/: aukf_trajectory_predictor.cpp
ukf_trajectory_predictor/src/test/: ukf_trajectory_predictor_node.cpp
